# single-file-project-dumper

./: .file_dumper_state.json  .gitignore  README.md  file_dumper.py  project_code.txt  pyproject.toml
project_dumper/: __init__.py  __main__.py  config.py  curses_ui.py  features.py  file_dumper.py  file_utils.py  interactive.py  preferences.py  project_utils.py  state_editor.py  template.py  token_utils.py  tui.py  ui_utils.py
