[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project_dumper"
version = "0.2.0"
description = "A smart tool to create LLM-optimized dumps of your codebase with token counting and interactive editing"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    { name = "Kunal Deo", email = "kunaldeo@gmail.com" }
]
dependencies = []

[project.scripts]
project-dumper = "project_dumper.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["project_dumper"]